--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <img id="lampada" src="assets/image/luz-apagada.png" alt="Lâmpada">
   <img id="lampadaAcesa" src="assets/image/luz-acesa.png" alt="Lâmpada Acesa" style="display:none">
 
-  <!-- Contador -->
+></script>
+</body>
+</html>  <!-- Contador -->
   <div class="contador">
     Interações: <span id="contador">0</span> / 100
   </div>
@@ -23,6 +25,4 @@
     <button id="desligar" class="desligar">Desligar</button>
   </div>
 
-  <script src="index.js"></script>
-</body>
-</html>
+  <script src="index.js"
